# llms-txt-generator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  publish.yml
examples/: anthropic.com.llms.txt  stripe.com.llms.txt  vercel.com.llms.txt
src/llmstxt_generator/: __init__.py  builder.py  cli.py  config.py  fetchers.py  llm.py
tests/: test_config.py  test_urls.py  test_validation.py
