[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmstxt-generator"
version = "0.1.0"
description = "Build a high-quality llms.txt for any website. Model-agnostic, SSRF-safe, no hallucinated URLs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Trakkr", email = "hello@trakkr.ai" }]
keywords = ["llms.txt", "llmstxt", "ai", "seo", "geo", "ai-visibility", "crawlers", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "httpx>=0.24",
    "beautifulsoup4>=4.11",
    "openai>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
llmstxt-gen = "llmstxt_generator.cli:main"

[project.urls]
Homepage = "https://trakkr.ai"
Repository = "https://github.com/trakkr-aisearch/llms-txt-generator"
Issues = "https://github.com/trakkr-aisearch/llms-txt-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llmstxt_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
